fix: review suggestions and use localization

--- a/web/crux-ui/src/styles/dyo-date-picker.css
+++ b/web/crux-ui/src/styles/dyo-date-picker.css
@@ -1,3 +1,5 @@
+/* Customized stylesheet for imported react-datepicker component */
+
 .react-datepicker__navigation-icon::before,
 .react-datepicker__year-read-view--down-arrow,
 .react-datepicker__month-read-view--down-arrow,
