feat: rename cruxuiport

--- a/golang/pkg/cli/traefik.yaml.tmpl
+++ b/golang/pkg/cli/traefik.yaml.tmpl
@@ -23,7 +23,7 @@ http:
     crux-ui:
       loadBalancer:
         servers:
-          - url: http://{{.InternalHost}}:{{.CruxUiPort}}
+          - url: http://{{.InternalHost}}:{{.CruxUIPort}}
 
     crux:
       loadBalancer:
