feat(cli): add host override for any number of hosts (#1014)
* feat(cli): add host override for any number of hosts

--- a/golang/pkg/cli/traefik.yaml.tmpl
+++ b/golang/pkg/cli/traefik.yaml.tmpl
@@ -1,24 +1,44 @@
 http:
   routers:
+    {{ if .CruxUIDisabled }}
     crux-ui:
-      rule: Host(`localhost`) || Host(`{{.InternalHost}}`)
+      rule: {{.HostRules}}
       service: crux-ui
       entryPoints:
         - web
+    {{ end }}
 
-    crux:
-      rule: (Host(`localhost`) || Host(`{{.InternalHost}}`)) && (PathPrefix(`/api`) && !PathPrefix(`/api/auth`) && !PathPrefix(`/api/status`))
-      service: crux
+
+    {{ if .CruxDisabled }}
+    crux-http:
+      rule: ({{.HostRules}}) && (PathPrefix(`/api`) && !PathPrefix(`/api/auth`) && !PathPrefix(`/api/status`))
+      service: crux-http
       entryPoints:
         - web
 
+    crux-grpc:
+      rule: ({{.HostRules}}) && Headers(`content-type`, `application/grpc`)
+      service: crux-grpc
+      entryPoints:
+        - web
+    {{ end }}
+
   services:
+    {{ if .CruxUIDisabled }}
     crux-ui:
       loadBalancer:
         servers:
           - url: http://{{.InternalHost}}:{{.CruxUIPort}}
+    {{ end }}
 
-    crux:
+    {{ if .CruxDisabled }}
+    crux-http:
       loadBalancer:
         servers:
           - url: http://{{.InternalHost}}:{{.CruxPort}}
+
+    crux-grpc:
+      loadBalancer:
+        servers:
+          - url: h2c://{{.InternalHost}}:5000
+    {{ end }}
